erDiagram
  CASE ||--o{ EVIDENCE_ITEM : contains
  SPECIES ||--o{ EVIDENCE_ITEM : classifies
  CASE ||--o{ CASE_SUSPECT : links
  SUSPECT ||--o{ CASE_SUSPECT : links
  EVIDENCE_ITEM ||--o{ CUSTODY_EVENT : has_history
  USERS ||--o{ CUSTODY_EVENT : records
  USERS ||--o{ MONTHLY_REPORT : approves
  MONTHLY_REPORT ||--o{ MONTHLY_REPORT_TRANSLATION : has

  USERS {
    uuid id PK
    string username
    string password_hash
    string role
  }
  CASE {
    uuid id PK
    string case_type
    string status
    string requesting_agency
  }
  SPECIES {
    uuid id PK
    string common_name
    string scientific_name
    string seized_part
    string unit
    numeric reference_value_usd
  }
  EVIDENCE_ITEM {
    uuid id PK
    uuid case_id FK
    uuid species_id FK
    string description
    numeric quantity
    string unit
    date collection_date
    string photo_key
  }
  SUSPECT {
    uuid id PK
    string full_name
    string nationality
  }
  CASE_SUSPECT {
    uuid case_id FK
    uuid suspect_id FK
    string role_in_case
  }
  CUSTODY_EVENT {
    uuid id PK
    uuid evidence_item_id FK
    uuid recorded_by_user_id FK
    string handed_from
    string handed_to
    timestamp occurred_at
  }
  MONTHLY_REPORT {
    uuid id PK
    int month
    int year
    int total_seizures
    numeric potential_loss_usd
    numeric potential_loss_sgd
    string most_affected_species
    string top_trafficker_nationality
    string status
    uuid approved_by_user_id FK
    timestamp approved_at
  }
  MONTHLY_REPORT_TRANSLATION {
    uuid id PK
    uuid report_id FK
    string language
    string narrative_text
    string pdf_key
  }